--- a/css/styles.css
+++ b/css/styles.css
@@ -2,79 +2,122 @@
 html, body {
 	background: #afa08c;
     color: black;
-    font-family: Helvetica, serif;
+    font-family: 'Roboto', sans-serif;
 	}
-
-div {
-    margin: .25%;
-    padding: .25%;
-}
 
 h1, h2, h3 { 
     font-size: 1.25em;
-    font-weight: 900;
-    font-family: Garamond, serif;
+    font-weight: bold;
 }
 
 h4, h5, h6 { 
     font-size: 1em;
-    font-family: Garamond, serif;
 }
 
 p {
     font-size: 1em;
-    font-weight: 400;
-    font-family: Arial, sans-serif;
+    font-weight: normal;
     color: black
 }
 
-footer {
-    box-sizing: border-box;
+/* footer styles */
+footer  {
+    font-size: 1em;
     background-color: #e3a859;
     color: black;
-    border: 4px solid #4b361b;
-    width: 20%;
-    height: auto;
-    padding: 3px;
-    float:left;        
+    border: .25em solid #5f5445;
+    border-radius: 10px;
+    padding:  .25% .5% ;
+    word-wrap: break-word;
+    float:left;
+    transition: background-color 0.75s ease;
 }
 
-/*header {
-    
-}*/
-
-/******* homepage styles ******/
-.block {
-     margin: 1%;
+footer:hover {
+  background-color: #e8dfd4;
 }
+
+/* footer->address styles */
+address {
+    color: black;
+    font-style: normal;
+}
+
+address a {
+    display: block;
+    color: black;
+    font-style: italic;
+    text-align: center;
+}
+
 
 #homepagetitle {
-    font-family: Arial, sans-serif;
+    font-family: 'Roboto', sans-serif;
     background-color: antiquewhite;
     color: #212f3d;
-
-    
 }
-#pbox {
-    box-sizing: border-box;
-    background-color: #e3a859;
-    color: black;
-    border: .25em solid #4b361b;
-    width: 20%;
-    height: auto;
-    padding: .25%;
-    float:right;
-        
- }
+
 
 #personalinfo {
-    font-family: Arial, sans-serif;
     background-color: antiquewhite;
     color: #212f3d;
 }
 
+.pic {    
+    border-radius: 15px;
+}
+
+#smpic {
+    padding: 0px 37px 0px 0px;
+}
+
+#smtext p.name {
+    padding: 0px 37px 0px 0px;
+    margin: 0px;
+}
+
+#smtext p.address {
+    padding: 0px 25px 0px 0px;
+    margin: 0px;
+}
+
+#smtext p.email {
+    padding: 0px 13px 0px 0px; 
+    margin: 0px;
+}
+
+#pbox {
+    width: 180px;
+    margin: 5px;
+    padding: 5px;
+    background-color: #ED8029;
+    text-align: right;
+    border-radius: 15px;
+    
+    position: relative;
+    left: -180px;
+    bottom: 0px;
+    
+    transition: 3s ease;
+}
+
+#pbox:hover {
+    width: 350px;
+}
+
+
+/*#pbox p{
+    font-size: 1em;
+    background-color: #e3a859;
+    color: black;
+    border: .25em solid #5f5445;
+    padding: .25%;
+    word-wrap: break-word;
+    float: left;
+        
+ }
+*/
 #briefhistory {
-    font-family: Arial, sans-serif;
     background-color: snow;
     width: 55%;
     color: #212f3d;
@@ -84,7 +127,6 @@ footer {
 #ALU_name {
     font-size: 1em;
     font-weight: 400;
-    font-family: Arial, sans-serif;
     background-color: lightgreen;
     color: #212f3d;
 }
@@ -100,7 +142,6 @@ footer {
 #ALU_workexp1 {
     font-size: 1em;
     font-weight: 400;
-    font-family: Arial, sans-serif;
     background-color: #c1c1c1;
     color: #212f3d;
     list-style-type: square;
